<resources>
    <string name="app_name">CATÁLOGO DE ZAPATOS</string>
    <string name="txt_zapato">ZAPATOS</string>
    <string name="txt_cliente">CLIENTES</string>
    <string name="txt_compra">COMPRAS</string>
    <string name="insertar">INGRESAR</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="ver">VER</string>
    <string name="modificarEliminar">MODIFICAR O ELIMINAR</string>
    <string name="title_activity_menu_clientes">MENU CLIENTES</string>
    <string name="title_activity_menu_zapatos">MENU ZAPATOS</string>
    <string name="nombre_cliente">Nombre</string>
    <string name="id_cliente">Id</string>
    <string name="apellido_cliente">Apellido</string>
    <string name="cedula_cliente">Cedula</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="codigo">CODIGO:</string>
    <string name="id_zapato">Id</string>
    <string name="marca_zapato">Marca</string>
    <string name="color_zapato">Color</string>
    <string name="talla_zapato">Talla</string>
    <string name="tipo_zapato">Tipo</string>
    <string name="cantidad_zapato">Cantidad</string>
    <string name="precio_zapato">Precio</string>
    <string name="datos_cliente">Ingrese los datos del cliente solicitados</string>
    <string name="datos_zapato">Ingrese los datos del zapato</string>
    <string name="id_compra">Id</string>
    <string name="fecha_compra">Fecha</string>
    <string name="validez_compra">Validez</string>
    <string name="zapato_compra">Zapatos</string>
    <string name="anular_compra">ANULAR</string>

</resources>
