<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/colorFondo">

    <Button
            android:text="@string/txt_zapato"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_zapatos" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_compras"
            app:layout_constraintVertical_bias="0.696" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.502"/>
    <Button
            android:text="@string/txt_compra"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_compras" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_clientes" app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:text="@string/txt_cliente"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_clientes"
            android:layout_marginBottom="184dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497"/>

</android.support.constraint.ConstraintLayout>