<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modulo_compras.CrearCompra" android:orientation="vertical">
    <TextView
            android:text="@string/datos_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView26" android:layout_weight="1"
            android:textColor="@color/colorTextoCampos" android:textStyle="bold" android:textSize="25sp"
            android:textAlignment="center" android:background="@color/colorFondo"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="155dp" android:layout_weight="1" android:background="@color/colorFondo">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="206dp"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/id_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="43dp" android:id="@+id/textView28" android:textColor="@color/colorCampos"
                    android:textSize="25sp" android:textStyle="bold" android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="206dp"
                android:layout_height="match_parent">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txt_ing_id_cli_com" android:textColor="@color/colorTextoCampos"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:text="@string/datos_zapato"
            android:layout_width="match_parent"
            android:layout_height="120dp" android:id="@+id/textView27" android:textColor="@color/colorTextoCampos"
            android:textStyle="bold" android:textSize="25sp" android:textAlignment="center"
            android:background="@color/colorFondo"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="167dp" android:layout_weight="1" android:background="@color/colorFondo">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="206dp"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/id_zapato"
                    android:layout_width="match_parent"
                    android:layout_height="44dp" android:id="@+id/textView29" android:textColor="@color/colorCampos"
                    android:textSize="25sp" android:textStyle="bold" android:textAlignment="center"/>
            <TextView
                    android:text="@string/cantidad_zapato"
                    android:layout_width="match_parent"
                    android:layout_height="44dp" android:id="@+id/textView30" android:textStyle="bold"
                    android:textColor="@color/colorCampos" android:textAlignment="center" android:textSize="25sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="206dp"
                android:layout_height="match_parent">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txt_ing_id_zap_com" android:textColor="@color/colorTextoCampos"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txt_ing_can_zap_com" android:textColor="@color/colorTextoCampos"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="29dp" android:layout_weight="1" tools:layout_editor_absoluteY="211dp"
            android:background="@color/colorFondo">

        <Button
                android:text="@string/insertar"
                android:layout_width="156dp"
                android:layout_height="45dp" android:id="@+id/btn_ing_com" android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorTextoBotones"
                android:background="@color/colorBotones"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>