<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:orientation="vertical"
              android:background="@color/colorFondo">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="209dp"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/id_compra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView35" android:layout_weight="1"
                        android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="20sp"
                        android:background="@color/colorFondo"/>
                <TextView
                        android:text="@string/nombre_cliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView34" android:layout_weight="1"
                        android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="20sp"
                        android:background="@color/colorFondo"/>
                <TextView
                        android:text="@string/apellido_cliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView33" android:layout_weight="1"
                        android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="20sp"
                        android:background="@color/colorFondo"/>
                <TextView
                        android:text="@string/cedula_cliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView32" android:layout_weight="1"
                        android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="20sp"
                        android:background="@color/colorFondo"/>
                <TextView
                        android:text="@string/fecha_compra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView31" android:layout_weight="1"
                        android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="20sp"
                        android:background="@color/colorFondo"/>
                <TextView
                        android:text="@string/validez_compra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView37" android:layout_weight="1"
                        android:textSize="20sp" android:textColor="@color/colorCampos" android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/txt_id_com" android:layout_weight="1"
                        android:textColor="@color/colorTextoCampos" android:textSize="20sp"
                        android:background="@color/colorFondo"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/txt_nom_com" android:layout_weight="1"
                        android:textColor="@color/colorTextoCampos" android:textSize="20sp"
                        android:background="@color/colorFondo"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/txt_ape_com" android:layout_weight="1"
                        android:textColor="@color/colorTextoCampos" android:textSize="20sp"
                        android:background="@color/colorFondo"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/txt_ced_com" android:layout_weight="1"
                        android:textColor="@color/colorTextoCampos" android:textSize="20sp"
                        android:background="@color/colorFondo"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/txt_fec_com" android:layout_weight="1"
                        android:textColor="@color/colorTextoCampos" android:textSize="20sp"
                        android:background="@color/colorFondo"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/txt_val_com" android:layout_weight="1"
                        android:textStyle="bold" android:textSize="20sp" android:textColor="@color/colorTextoCampos"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:text="@string/zapato_compra"
            android:layout_width="match_parent"
            android:layout_height="30dp" android:id="@+id/textView41" android:textColor="@color/colorCampos"
            android:textStyle="bold" android:textSize="20sp" android:background="@color/colorFondo"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp" android:id="@+id/txt_zap_com" android:textAlignment="center"
            android:textColor="@color/colorPrimary" android:textSize="22sp" android:background="@color/colorFondo"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp" android:id="@+id/txt_tot_com" android:textAlignment="center"
            android:textColor="@color/colorTextoCampos" android:textSize="22sp" android:background="@color/colorFondo"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="@color/colorFondo">

        <Button
                android:text="@string/anular_compra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_anu_com" android:layout_weight="1"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorTextoBotones" android:background="@color/colorBotones"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="visible"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>