<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modulo_zapatos.MenuZapatos" android:background="@color/colorFondo">

    <Button
            android:text="@string/insertar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_reg_zap"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="64dp" app:layout_constraintBottom_toTopOf="@+id/btn_mod_zap"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/modificarEliminar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_mod_zap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginBottom="192dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955"/>
    <Button
            android:text="@string/ver"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_ver_zap" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="144dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_reg_zap" app:layout_constraintVertical_bias="0.429"/>
</android.support.constraint.ConstraintLayout>