<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorFondo">

    <TextView
            android:text="@string/id_zapato"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:id="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.74"
            android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="24sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/txt_act_id_zap"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/color_zapato"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView21" app:layout_constraintVertical_bias="0.864"
            android:textColor="@color/colorCampos" android:textStyle="bold"
            android:textSize="24sp" app:layout_constraintEnd_toStartOf="@+id/txt_act_can_zap"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/tipo_zapato"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:id="@+id/textView21" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView22" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92"
            android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="24sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/txt_act_can_zap"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/talla_zapato"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:id="@+id/textView22" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView24" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.948"
            android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="24sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/txt_act_tal_zap"
            app:layout_constraintHorizontal_bias="0.0" tools:ignore="UnknownId"/>
    <TextView
            android:text="@string/cantidad_zapato"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:id="@+id/textView23" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.656" android:textColor="@color/colorCampos" android:textStyle="bold"
            android:textSize="24sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/txt_act_can_zap"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/precio_zapato"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:id="@+id/textView24" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView23" app:layout_constraintVertical_bias="0.953"
            android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="24sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/txt_act_can_zap"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/marca_zapato"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView9" app:layout_constraintVertical_bias="0.865"
            android:textColor="@color/colorCampos" android:textStyle="bold"
            android:textSize="24sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/txt_act_mar_zap"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="212dp"
            android:layout_height="35dp"
            android:id="@+id/txt_act_id_zap"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorFondo" android:textColor="@color/colorTextoCampos" android:textSize="24sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_act_mar_zap" app:layout_constraintVertical_bias="0.083"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="212dp"
            android:layout_height="33dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_act_can_zap"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="448dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.028" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="212dp"
            android:layout_height="33dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_act_pre_zap"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_act_can_zap" app:layout_constraintVertical_bias="0.95"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="212dp"
            android:layout_height="33dp"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="332dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_act_pre_zap" app:layout_constraintVertical_bias="0.0"
            android:id="@+id/txt_act_tal_zap"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="212dp"
            android:layout_height="33dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_act_tip_zap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="268dp"
            android:layout_marginEnd="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_act_tal_zap"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="212dp"
            android:layout_height="33dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_act_col_zap"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="196dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_act_tip_zap" app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="212dp"
            android:layout_height="33dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_act_mar_zap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_act_col_zap"
            android:layout_marginBottom="28dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.968"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/actualizar"
            android:layout_width="111dp"
            android:layout_height="33dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_act_zap" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.49" app:layout_constraintVertical_bias="0.805"
            android:background="@color/colorBotones" android:textColor="@color/colorTextoBotones"/>
</android.support.constraint.ConstraintLayout>