<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modulo_clientes.CrearCliente" android:background="@color/colorFondo">
    <TextView
            android:text="@string/nombre_cliente"
            android:layout_width="118dp"
            android:layout_height="49dp"
            android:id="@+id/textView4" android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7" app:layout_constraintVertical_bias="0.794"
            android:layout_marginStart="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/colorCampos" android:textStyle="bold"/>
    <TextView
            android:text="@string/apellido_cliente"
            android:layout_width="119dp"
            android:layout_height="45dp"
            android:id="@+id/textView7" android:textSize="25sp"
            android:layout_marginBottom="48dp" app:layout_constraintBottom_toTopOf="@+id/textView8"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.097" android:textColor="@color/colorCampos"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/cedula_cliente"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:id="@+id/textView8" android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="332dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.095" android:textColor="@color/colorCampos"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_acc_nom_cli"
            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.73" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_acc_ape_cli"
            app:layout_constraintVertical_bias="0.809" android:hint="@string/nombre_cliente" android:textSize="20sp"
            android:textColor="@color/colorTextoCampos"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_acc_ape_cli"
            app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619" app:layout_constraintBottom_toTopOf="@+id/txt_acc_ced_cli"
            android:layout_marginBottom="48dp" android:hint="@string/apellido_cliente" android:textSize="20sp"
            android:textColor="@color/colorTextoCampos"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_acc_ced_cli"
            app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="332dp"
            app:layout_constraintHorizontal_bias="0.666" android:hint="@string/cedula_cliente" android:textSize="20sp"
            android:textColor="@color/colorTextoCampos"/>
    <Button
            android:layout_width="138dp"
            android:layout_height="49dp"
            android:id="@+id/btn_acc_ing_cli" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.722" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:text="@string/insertar"
            android:backgroundTint="@color/colorBotones" android:textColor="@color/colorTextoBotones"/>
</android.support.constraint.ConstraintLayout>